TAG: annotload-6-0-8-?
DATE: 10/31/2016
STAFF: lec
CHANGES: TR12427/Disease Ontology (DO)

TAG: annotload-6-0-6-1
DATE: 09/08/2016
STAFF: lec
CHANGES: TR12345/GO-Noctua/GPAD/GPI

TAG: annotload-tr12349
DATE: 08/10/2016
STAFF: lec
CHANGES: branch tag for TR12349 

TAG: annotload-6-0-5-1
DATE: 07/05/2016
STAFF: sc
CHANGES: Merge tr12267 to trunk

TAG: annotload-tr12267-1
DATE: 06/14/2016
STAFF: sc
CHANGES: annotload.py Added recognitions of OMIM/HPO annotations

TAG: annotload-6-0-3-2
TAG: annotload-6-0-3-1
DATE: 03/23/2016
STAFF: lec 
CHANGES: removed comments regarding old max length values for note chunks

TAG: annotload-6-0-2-1
DATE: 12/09/2015
STAFF: lec
CHANGES: 
1) TR12070/12011/postgres/isMP cleanup due to running htmpload/impc
2) removed chunking of mgi_notechunk table

TAG: annotload-6-0-0-1
DATE: 7/23/15
STAFF: pf
CHANGES: postgres conversion release tag

TAG: annotload-tr11750-MP
DATE: 6/29/15
STAFF: kstone
merge point tag for tr11750 development

TAG: annotload-tr11750-BP
DATE: 5/5/15
STAFF: pf
Branch point tag for tr11750 development

TAG: annotload-5-2-1-2
DATE: 03/11/2015
STAFF: sc
CHANGES: TR11674 - added handling for isDiseaseMarker and isMPMarker

TAG: annotload-5-2-1-1
DATE: 12/02/2014
STAFF: sc
CHANGES: merge tr11674 branch to trunk

TAG: annotload-tr11674-BP
DATE: 08/20/2014
STAFF: jsb
CHANGES: branch point for HDP2 project (TR11674, team scrum-dog)

TAG: annotload-5-1-6-3
TAG: annotload-5-1-6-2
TAG: annotload-5-1-6-1
DATE: 01/07/2014
STAFF: lec
CHANGES:
1) TR11518/add 'isGOAmouse'

TAG: annotload-5-1-5-1
DATE: 12/02/2013
STAFF: dbm
CHANGES:
1) TR11475: shell "-x" cleanup

TAG: annotload-5-1-4-1
DATE: 07/01/2013
STAFF: lec
CHANGES: from scrum-dog/Sybase 15 testing
- changed "-f -x" to "-fx" for solaris/linux
this command will work for both platforms

TAG: annotload-5-1-2-1 
DATE: 04/01/2013
STAFF: sc
CHANGES: merge tr6519 changes to the trunk

TAG: annotload-tr6519-3
DATE: 03/18/2013
STAFF: sc
CHANGES: N2MO/TR6510